--- a/package.json
+++ b/package.json
@@ -11,6 +11,9 @@
   },
   "dependencies": {
     "@nextui-org/react": "^2.4.1",
+    "@tanstack/react-query": "^5.40.1",
+    "@tanstack/react-query-devtools": "^5.40.1",
+    "axios": "^1.7.2",
     "framer-motion": "^11.2.10",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
@@ -18,6 +21,7 @@
     "react-icons": "^5.2.1",
     "react-query": "^3.39.3",
     "react-router-dom": "^6.23.1",
+    "react-simple-star-rating": "^5.1.7",
     "swiper": "^11.1.4",
     "yup": "^1.4.0",
     "zustand": "^4.5.2"
