--- a/package.json
+++ b/package.json
@@ -10,11 +10,16 @@
     "preview": "vite preview"
   },
   "dependencies": {
+    "@hookform/resolvers": "^3.3.4",
     "@nextui-org/react": "^2.4.1",
     "@tanstack/react-query": "^5.40.1",
     "@tanstack/react-query-devtools": "^5.40.1",
+    "@types/node": "^20.14.5",
     "axios": "^1.7.2",
+    "cloudinary-react": "^1.8.1",
+    "dotenv": "^16.4.5",
     "framer-motion": "^11.2.10",
+    "lodash": "^4.17.21",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
     "react-hook-form": "^7.51.5",
@@ -23,6 +28,7 @@
     "react-router-dom": "^6.23.1",
     "react-simple-star-rating": "^5.1.7",
     "swiper": "^11.1.4",
+    "ts-node": "^10.9.2",
     "yup": "^1.4.0",
     "zustand": "^4.5.2"
   },
