--- a/.env
+++ b/.env
@@ -1,7 +1,7 @@
 # CLOUDINARY IMAGE
-VITE_CLOUD_NAME = dooge27kv
-VITE_CLOUD_API_KEY = 665422579924448
-VITE_CLOUD_SECRET_KEY = S81b3aX7Zf_FZp7nWReHXb6c3pQ
-VITE_CLOUD_PRESET_NAME = food_app
+VITE_CLOUD_NAME =
+VITE_CLOUD_API_KEY =
+VITE_CLOUD_SECRET_KEY =
+VITE_CLOUD_PRESET_NAME =
 
 VITE_CLOUDINARY_URL= cloudinary://CLOUD_API_KEY:CLOUD_SECRET_KEY@CLOUD_NAME
