--- a/package.json
+++ b/package.json
@@ -38,15 +38,17 @@
     "@types/react": "^18.2.66",
     "@types/react-dom": "^18.2.22",
     "@typescript-eslint/eslint-plugin": "^7.2.0",
-    "@typescript-eslint/parser": "^7.2.0",
+    "@typescript-eslint/parser": "^8.0.0-alpha.44",
     "@vitejs/plugin-react-swc": "^3.5.0",
     "autoprefixer": "^10.4.19",
-    "eslint": "^8.57.0",
+    "eslint": "8.52.0",
     "eslint-plugin-react-hooks": "^4.6.0",
     "eslint-plugin-react-refresh": "^0.4.6",
     "postcss": "^8.4.38",
+    "prettier": "3.1.0",
+    "prettier-eslint": "16.1.2",
     "tailwindcss": "^3.4.3",
-    "typescript": "^5.2.2",
+    "typescript": "4.4.4",
     "vite": "^5.2.0"
   }
 }
